yaml/kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx-shd
spec:
    rules:
    - host: kiali.istio-system.220.90.208.239.nip.io
      http:
        paths:
        - backend:
            serviceName: kiali
            servicePort: 20001
          path: /api/kiali
          pathType: ImplementationSpecific
    - http:
        paths:
        - backend:
            serviceName: kiali
            servicePort: 20001
          path: /api/kiali
          pathType: ImplementationSpecific
    tls:
    - secretName: kiali-https-secret
